# dhan

./: CLAUDE.md  CONTEXT.md  README.md  dhan.py  pyproject.toml
algo/: __init__.py
algo/analytics/: __init__.py  charts.py  metrics.py
algo/broker/: __init__.py  models.py  protocols.py
algo/broker/providers/: __init__.py  dhan_broker.py  simulated.py
algo/data/: __init__.py  models.py  protocols.py
algo/data/providers/: __init__.py  csv_feed.py  dhan_feed.py
algo/engine/: __init__.py  backtest.py  base.py  fill_models.py  live.py  paper.py
algo/persistence/: __init__.py  csv_writer.py
algo/portfolio/: __init__.py  performance.py  portfolio.py
algo/strategy/: __init__.py  base.py  context.py
core/: __init__.py  client.py  config.py  dhan.py  exceptions.py
core/models/: __init__.py  common.py  funds.py  historical.py  market.py  orders.py  portfolio.py
core/services/: __init__.py  base.py  funds.py  historical.py  market.py  orders.py  portfolio.py
data/: intraday_1333_20251129_130702.csv  intraday_1333_20251129_130752.csv
docs/: TECHNICAL_SPECIFICATION.md
scripts/: get_daily_data.py  get_intraday_data.py  run_backtest.py  run_live.py  run_paper.py
strategies/: __init__.py  rsi_mean_reversion.py  sma_crossover.py
strategies/examples/: __init__.py
